# gear_sdk_audit

./: .gitignore  README.md  audit_gears.py  bids_docker_audit.py  example_site_list.py  exchange_audit_gears.py  full_audit_gears.py  instance_audit_gears.py  pyproject.toml  requirements.txt
commands/: bash_crawl.sh  find_os_details.py  find_os_version.sh  manage_sys.py  scrape_dockerhub.py  sync.sh
